# my-rust-template

./: AGENTS.md  Cargo.toml  LICENSE-MIT
.github/workflows/: release.yml  test.yml
src/: lib.rs
