[package]
authors      = ["lxl66566 <lxl66566@gmail.com>"]
categories   = ["xxx"]
description  = "xxx"
edition      = "2024"
exclude      = ["AGENTS.md", ".github", ".opencode", ".taplo.toml"]
homepage     = "https://github.com/lxl66566/xxx"
keywords     = ["xxx"]
license      = "MIT OR Apache-2.0"
name         = "xxx"
readme       = "README.md"
repository   = "https://github.com/lxl66566/xxx"
rust-version = "1.85"
version      = "0.1.0"

[dependencies]

# If you are building bin target, uncomment this
# [profile.release]
# lto       = true
# opt-level = "s"
# panic     = "abort"
# strip     = true
